--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,22 +3,52 @@ services:
     build:
       context: ./API
       dockerfile: Dockerfile
-
     container_name: api
 
     depends_on:
-      - db
+      - mariadb
 
-  db:
-    image: mysql:5.7
-    container_name: mysql
+    networks:
+      - internal
+
     environment:
-      MYSQL_DATABASE: track
-      MYSQL_ROOT_PASSWORD: track
-      MYSQL_USER: root
-      MYSQL_PASSWORD: pass@123
+      APP_NAME: ${APP_NAME}
+      APP_ENV: ${APP_ENV}
+      APP_KEY: ${APP_KEY}
+      APP_DEBUG: ${APP_DEBUG}
+      APP_URL: ${APP_URL}
+      FRONTEND_URL: ${FRONTEND_URL}
+      LOG_CHANNEL: ${LOG_CHANNEL}
+      LOG_DEPRECATIONS_CHANNEL: ${LOG_DEPRECATIONS_CHANNEL}
+      LOG_LEVEL: ${LOG_LEVEL}
+      DB_CONNECTION: ${DB_CONNECTION}
+      DB_HOST: mariadb
+      DB_PORT: ${DB_PORT}
+      DB_DATABASE: ${DB_DATABASE}
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+      BROADCAST_DRIVER: ${BROADCAST_DRIVER}
+      CACHE_DRIVER: ${CACHE_DRIVER}
+      FILESYSTEM_DISK: ${FILESYSTEM_DISK}
+      QUEUE_CONNECTION: ${QUEUE_CONNECTION}
+      SESSION_DRIVER: ${SESSION_DRIVER}
+      SESSION_LIFETIME: ${SESSION_LIFETIME}
+   
+  mariadb:
+    image: mariadb:latest
+    restart: always
+    container_name: mariadb
+    environment:
+        MYSQL_DATABASE: ${DB_DATABASE}
+        MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
     volumes:
-      - db_data:/var/lib/mysql
+      - mariadb_data:/var/lib/mysql
+
+    networks:
+      - internal
+
+    ports:
+        - "3306:3306"
 
   caddy:
     image: caddy:latest
@@ -27,9 +57,15 @@ services:
       - "80:80"
     volumes:
       - ./infrastructure/caddy/Caddyfile:/etc/caddy/Caddyfile
-
     depends_on:
       - api
+    
+    networks:
+      - internal
 
 volumes:
-  db_data:
+  mariadb_data:
+
+networks:
+  internal:
+    driver: bridge
