--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,12 @@ services:
       context: ./API
       dockerfile: Dockerfile
     container_name: api
-
+    
+    command:  ["./entrypoint.sh"]
+    
     depends_on:
-      - mariadb
+      mariadb:
+        condition: service_healthy
 
     networks:
       - internal
@@ -38,6 +41,7 @@ services:
     image: mariadb:latest
     restart: always
     container_name: mariadb
+    
     environment:
         MYSQL_DATABASE: ${DB_DATABASE}
         MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
@@ -49,6 +53,13 @@ services:
 
     ports:
         - "3306:3306"
+
+    healthcheck:
+      test: ["CMD-SHELL", "mariadb-admin ping -p$DB_PASSWORD"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 40s
 
   caddy:
     image: caddy:latest
