add spa caddy configs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@
           condition: service_healthy
 
       networks:
-        - internal
+        - internal  
 
       environment:
         APP_NAME: ${APP_NAME}
@@ -61,13 +61,26 @@
         retries: 5
         start_period: 40s
 
+    spa:
+      build:
+        context: ./SPA
+        dockerfile: Dockerfile
+
+      container_name: spa
+      volumes:
+        - spa_data:/var/www/spa
+
     caddy:
       image: caddy:latest
       container_name: caddy
       ports:
         - "80:80"
+        - "8080:8080"
+
       volumes:
         - ./infrastructure/caddy/Caddyfile:/etc/caddy/Caddyfile
+        - spa_data:/var/www/spa
+
       depends_on:
         - api
       
@@ -76,6 +89,7 @@
 
   volumes:
     mariadb_data:
+    spa_data:
 
   networks:
     internal:
