--- a/infrastructure/caddy/Caddyfile
+++ b/infrastructure/caddy/Caddyfile
@@ -1,3 +1,13 @@
-:80 {
+## colocar variavel de ambiente para SPA DOMAIN
+
+:8080 {
     reverse_proxy api:80
+}
+
+## colocar variavel de ambiente para API DOMAIN
+
+:80 {
+    root * /var/www/spa/spa
+    try_files {path} /index.html
+	file_server
 }
