--- a/infrastructure/caddy/Caddyfile
+++ b/infrastructure/caddy/Caddyfile
@@ -14,7 +14,7 @@
 
 ## colocar variavel de ambiente para MOBI DOMAIN
 :3000 {
-    root * /var/www/spa/spa
+    root * /var/www/mobi
     try_files {path} /index.html
 	file_server
 }
