--- a/infrastructure/caddy/Caddyfile
+++ b/infrastructure/caddy/Caddyfile
@@ -2,6 +2,7 @@
 
 {$API_DOMAIN} {
     reverse_proxy api:80
+    tls {$EMAIL}
 }
 
 ## colocar variavel de ambiente para API DOMAIN
@@ -10,6 +11,7 @@
     root * /var/www/spa
     try_files {path} /index.html
 	file_server
+	tls {$EMAIL}
 }
 
 ## colocar variavel de ambiente para MOBI DOMAIN
@@ -17,4 +19,5 @@
     root * /var/www/mobi
     try_files {path} /index.html
 	file_server
+	tls {$EMAIL}
 }
