--- a/SPA/package.json
+++ b/SPA/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^10.11.0",
     "axios": "^1.7.2",
     "bootstrap-vue-3": "^0.3.12",
     "vue": "^3.4.21",
