--- a/MOBI/package.json
+++ b/MOBI/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "rollup": "^4.19.1",
     "tailwindcss": "^3.4.6",
     "vite": "^5.3.1"
   }
