--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,17 @@
       volumes:
         - spa_data:/var/www
 
+    mobi:
+      build:
+        context: ./MOBI
+        dockerfile: Dockerfile
+        args:
+          VITE_API_DOMAIN: ${API_DOMAIN}
+
+      container_name: mobi
+      volumes:
+        - mobi_data:/var/www
+
     caddy:
       image: caddy:latest
       container_name: caddy
@@ -75,6 +86,7 @@
       volumes:
         - ./infrastructure/caddy/Caddyfile:/etc/caddy/Caddyfile
         - spa_data:/var/www/spa
+        - mobi_data:/var/www/mobi
 
       depends_on:
         - api
@@ -91,6 +103,7 @@
   volumes:
     mariadb_data:
     spa_data:
+    mobi_data:
 
   networks:
     internal:
