--- a/infrastructure/caddy/Caddyfile
+++ b/infrastructure/caddy/Caddyfile
@@ -7,6 +7,8 @@
         header_up X-Real-IP {http.request.remote}
         header_up X-Forwarded-For {http.request.remote}
         header_up X-Forwarded-Proto {http.request.scheme}
+        header_up Access-Control-Allow-Methods "GET, POST, OPTIONS, DELETE"
+        header_up Access-Control-Allow-Headers "Content-Type"
     }
     
     tls {$EMAIL}
