--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,8 @@
         - ./infrastructure/caddy/Caddyfile:/etc/caddy/Caddyfile
         - spa_data:/var/www/spa
         - mobi_data:/var/www/mobi
+        - caddy_data:/data
+        - caddy_config:/config
 
       depends_on:
         - api
@@ -104,6 +106,8 @@
     mariadb_data:
     spa_data:
     mobi_data:
+    caddy_data:
+    caddy_config:
 
   networks:
     internal:
