--- a/infrastructure/caddy/Caddyfile
+++ b/infrastructure/caddy/Caddyfile
@@ -17,11 +17,25 @@
 ## colocar variavel de ambiente para API DOMAIN
 
 {$SPA_DOMAIN} {
-    root * /var/www/spa
-    try_files {path} /index.html
-	file_server
-	tls {$EMAIL}
+    reverse_proxy spa:5173 {
+        header_up Origin {http.request.header.Origin}
+        header_up Host {http.request.host}
+        header_up X-Real-IP {http.request.remote}
+        header_up X-Forwarded-For {http.request.remote}
+        header_up X-Forwarded-Proto {http.request.scheme}
+        header_up Access-Control-Allow-Methods "GET, POST, OPTIONS, DELETE"
+        header_up Access-Control-Allow-Headers "Content-Type"
+    }
+
+    tls {$EMAIL}
 }
+
+#{$SPA_DOMAIN} {
+#    root * /var/www/spa
+#    try_files {path} /index.html
+#	file_server
+#	tls {$EMAIL}
+#}
 
 ## colocar variavel de ambiente para MOBI DOMAIN
 {$MOBI_DOMAIN} {
