--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,9 @@
       container_name: spa
       volumes:
         - spa_data:/var/www
+        
+      networks:
+        - internal  
 
     mobi:
       build:
